k8s/base/rgb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rgb-server
  namespace: rgb
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: rgb-server
status:
  loadBalancer: {}
