k8s/base/rgb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rgb-server-ingress
  namespace: rgb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - rgb.awesomium.de
      secretName: express-tls
  rules:
    - host: rgb.awesomium.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rgb-server
                port:
                  number: 80
